# FragmentedMemories

./: CMakeLists.txt  Camera.h  FragmentedMemories.sln  FragmentedMemories.vcxproj  FragmentedMemories.vcxproj.filters  Main.cpp  Mesh.h  Texture.cpp  vcpkg.json
FragmentedMemories/: AnimatedModel.cpp  AnimatedModel.h  Camera.h  FragmentedMemories.vcxproj  FragmentedMemories.vcxproj.filters  Game.cpp  Game.h  Light.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParametricSurface.h  Plane.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.h  ShaderGenerator.h  Texture.cpp  Texture.h
FragmentedMemories/Models/Weapons_RTS_Pack/BLEND/: Arrow_01.blend1  Bolt01.blend1  Bow_01.blend1  Bow_02.blend1  CrossBow01.blend1  OneHand_Axe_Gold.blend1  OneHand_Axe_Iron.blend1  OneHand_Axe_Rust.blend1  OneHand_Dagger_Gold.blend1  OneHand_Dagger_Iron.blend1  OneHand_Dagger_Rust.blend1  OneHand_Hammer_Gold.blend1  OneHand_Hammer_Iron.blend1  OneHand_Hammer_Rust.blend1  OneHand_Sword_Gold.blend1  OneHand_Sword_Iron.blend1  OneHand_Sword_Rust.blend1  Shield01.blend1  Shield02.blend1  Shield03.blend1  Spear_Gold.blend1  Spear_Iron.blend1  Spear_Rust.blend1  Staff01.blend1  Staff02.blend1  Staff03.blend1  TwoHand_Axe_Gold.blend1  TwoHand_Axe_Iron.blend1  TwoHand_Axe_Rust.blend1  TwoHand_Hammer_Gold.blend1  TwoHand_Hammer_Iron.blend1  TwoHand_Hammer_Rust.blend1  TwoHand_Sword_Gold.blend1  TwoHand_Sword_Rust.blend1
FragmentedMemories/Models/car/: scene.gltf
FragmentedMemories/Models/van/: stepvan.mtl
FragmentedMemories/Shaders/: anim.frag  anim.vert
Shaders/: cube.vert
data/Models/: Readme.txt
data/Models/Darth Maul/: Darth Maul.mtl
src/: AnimatedModel.cpp  Game.cpp  Game.h  Main.cpp  Mesh.cpp  Renderer.cpp  Renderer.h  Scene.h  Texture.cpp
